--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10933,9 +10933,100 @@ a.text-dark:focus {
   }
 }
 
+.gu-mirror {
+  position: fixed !important;
+  margin: 0 !important;
+  z-index: 9999 !important;
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+}
+
+.gu-hide {
+  display: none !important;
+}
+
+.gu-unselectable {
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  user-select: none !important;
+}
+
+.gu-transit {
+  opacity: 0.2;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
+  filter: alpha(opacity=20);
+}
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: "Nunito";
+}
+
 .choose-add-category {
   display: grid;
   grid-template-columns: 88% 12%;
   grid-gap: 10px;
+}
+
+@media only screen and (max-width: 800px) {
+  .choose-add-category {
+    grid-template-columns: 4fr 3fr;
+  }
+}
+
+.circle {
+  height: 40px;
+  width: 40px;
+  box-sizing: border-box;
+  border-radius: 100%;
+  border: 1px solid #dadada;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.14);
+}
+
+.colors {
+  display: flex;
+  margin-left: 20px;
+}
+
+.circle {
+  margin-right: 9px;
+}
+
+.selected-color {
+  transform: scale(1.3);
+  transition: all 0.2s ease-in-out;
+}
+
+.categories {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 10px;
+}
+
+.categories .card-header {
+  font-size: 20px !important;
+  color: #4b4a4a !important;
+}
+
+.categories .card-body {
+  min-height: 50px !important;
+  padding: 0 !important;
+}
+
+.categories .card-body .intruder {
+  width: 0;
+  height: 0;
+  padding: 0;
+}
+
+span.btn {
+  color: red !important;
+  margin-left: -5px !important;
 }
 
